@@ -12,5 +12,14 @@ asctime (const struct tm *brokentime)
   char riscos_time[5];
 
   __cvt_broken_time (brokentime, riscos_time);
-  return __standard_time (riscos_time);
+  return __standard_time (riscos_time, NULL);
+}
+
+char *
+asctime_r (const struct tm *brokentime, char *buffer)
+{
+  char riscos_time[5];
+
+  __cvt_broken_time (brokentime, riscos_time);
+  return __standard_time (riscos_time, buffer);
 }
